--- a/db_generator_v2.ipynb
+++ b/db_generator_v2.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e2223e9b-af5f-4f6f-bbf6-07413d7cf3ef",
+   "metadata": {},
+   "source": [
+    "# Preparando os caminhos para os diretorios"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "4d94308d-132c-489b-95df-7dcca40f059d",
@@ -24,6 +32,14 @@
     "nasa_datasets_folder = Path('nasa_datasets')\n",
     "cumulative_dataset_path = nasa_datasets_folder / 'cumulative_koi.csv'\n",
     "dataset_control_path = dataset_folder / 'dataset_ctrl.parquet'\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "461017b3-9355-4c10-b102-f6681eba6758",
+   "metadata": {},
+   "source": [
+    "## Carregando os datasets de CONFIRMED E FALSE_POSITIVE"
    ]
   },
   {
@@ -61,6 +77,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85d780d3-25d7-4cff-89f3-6e505adc3baf",
+   "metadata": {},
+   "source": [
+    "## Selecionando o tamanho da menor lista para termos quantidades iguais entre Confirmados e falso positivos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "ef31e164-58bd-4815-8c85-c6639ab64b7b",
@@ -78,6 +102,14 @@
     "# recebe o tamanho da menor lista\n",
     "dataset_len = len(conf_list) if len(conf_list) < len(fls_pos_list) else len(fls_pos_list)\n",
     "print(f'Tamanho da menor lista {dataset_len}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93aecfd9-7421-4da7-98fc-551009bd5e05",
+   "metadata": {},
+   "source": [
+    "## Funções de tratamento dos dados"
    ]
   },
   {
@@ -157,17 +189,6 @@
     "    return outliers_idx\n",
     "\n",
     "\n",
-    "def serie_len_reduction(serie, ds_len=1000):\n",
-    "    \"\"\"\n",
-    "        Reduz o comprimento de uma serie utilizando interpolação cúbica\n",
-    "    \"\"\"\n",
-    "    data = serie[np.isfinite(serie)]\n",
-    "    f = interp1d(np.arange(len(data)), data, kind='cubic')\n",
-    "    idx = np.linspace(0, len(data) - 1, ds_len)\n",
-    "\n",
-    "    return f(idx)\n",
-    "\n",
-    "\n",
     "def pixel_file_resize(pixel_array:np.array, new_shape:tuple):\n",
     "    \"\"\"\n",
     "        Altera o shape da imagem utilizando interpolação cúbica\n",
@@ -191,6 +212,11 @@
     "\n",
     "\n",
     "def quarter_flux_slicer(quarter, slice_len):\n",
+    "    \"\"\"\n",
+    "    Função geradora que entrega a cada chamada uma porção \n",
+    "    de tamanho slice_len de registros de fluxo de luz continuos do quarter    \n",
+    "    \"\"\"\n",
+    "    \n",
     "    df_type = {f'px{n}': 'float32' for n in range(25)}\n",
     "    df_type['sap'] = 'float32'\n",
     "    df_type['quarter_idx'] = 'uint16'\n",
@@ -286,6 +312,12 @@
     "\n",
     "\n",
     "def save_quarter_dataframe(kepid, quarter, disposition, ds_len):\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Processa e salva a porção de tamanho \"ds_len\", de quartil da estrela \"kepid\",\n",
+    "    em arquivos .parquet\n",
+    "    \"\"\"\n",
+    "   \n",
     "    # se houver algum erro com o fluxo do quartil \n",
     "    # não pode prosseguir\n",
     "    if quarter.flux is None:\n",
@@ -311,6 +343,7 @@
     "        count += 1\n",
     "        \n",
     "    return count\n",
+    "\n",
     "\n",
     "def save_kepid_datasets(kepid, disposition, ds_len = 1000):\n",
     "\n",
@@ -356,6 +389,14 @@
     "    else:\n",
     "        print(f'\\nDo objeto de interesse {kepid}, foram salvos {count} pedaços de quartis\\n')\n",
     "    return 'ok'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f92ddde-0603-4a65-b098-fc2ccd71b97c",
+   "metadata": {},
+   "source": [
+    "## Teste"
    ]
   },
   {
@@ -413,10 +454,6 @@
     }
    ],
    "source": [
-    "# teste\n",
-    "# if dataset_control_path.exists():\n",
-    "    # dataset_control_path.unlink()\n",
-    "\n",
     "kepid = 6922244\n",
     "save_kepid_datasets(kepid, 'CONFD')\n",
     "\n",
@@ -642,6 +679,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bbd78fd2-ac3c-49bc-9bf4-b9175d3ae084",
+   "metadata": {},
+   "source": [
+    "## Teste de Remoção Detendência"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "924ddcee-a976-4531-a309-c1a9f22f0d85",
@@ -690,6 +735,14 @@
     "plt.figure(figsize=(15,4))\n",
     "d = simple_detrending(q)\n",
     "d.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efc27a06-b370-4f53-beee-d017ecc57b45",
+   "metadata": {},
+   "source": [
+    "# Gerando o Dataset"
    ]
   },
   {
@@ -846,14 +899,6 @@
     "            break\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "911b9c1a-35b1-4dbf-a3e7-8378611bb3b2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
